--- a/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
@@ -103,8 +103,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="verde-1" styleClass=""/>
                                         </div>
+                                        <h:message for="verde-1" styleClass="mensaje-alerta-13"/>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="verde-2"><span class="label-13">2</span></label>
@@ -116,8 +116,9 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="verde-2" styleClass=""/>
+
                                         </div>
+                                        <h:message for="verde-2" styleClass="mensaje-alerta-13"/>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="verde-3"><span class="label-13">3</span></label>
@@ -129,8 +130,9 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="verde-3" styleClass=""/>
+
                                         </div>
+                                        <h:message for="verde-3" styleClass="mensaje-alerta-13"/>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="verde-4"><span class="label-13">4</span></label>
@@ -142,8 +144,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="verde-4" styleClass=""/>
                                         </div>
+                                        <h:message for="verde-4" styleClass="mensaje-alerta-13"/>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="verde-5"><span class="label-13">5</span></label>
@@ -155,8 +157,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[9].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="verde-5" styleClass=""/>
                                         </div>
+                                        <h:message for="verde-5" styleClass="mensaje-alerta-13"/>
                                     </div>
                                 </div>
                             </div>
@@ -174,8 +176,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[10].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="amarillo-1" styleClass=""/>
                                         </div>
+                                        <h:message for="amarillo-1" styleClass="mensaje-alerta-13"/>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="amarillo-2"><span class="label-13">2</span></label>
@@ -187,8 +189,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[11].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="amarillo-2" styleClass=""/>
                                         </div>
+                                        <h:message for="amarillo-2" styleClass="mensaje-alerta-13"/>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="amarillo-3"><span class="label-13">3</span></label>
@@ -200,8 +202,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[12].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="amarillo-3" styleClass=""/>
                                         </div>
+                                        <h:message for="amarillo-3" styleClass="mensaje-alerta-13"/>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="amarillo-4"><span class="label-13">4</span></label>
@@ -213,8 +215,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[13].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="amarillo-4" styleClass=""/>
                                         </div>
+                                        <h:message for="amarillo-4" styleClass="mensaje-alerta-13"/>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="amarillo-5"><span class="label-13">5</span></label>
@@ -226,8 +228,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[14].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="amarillo-5" styleClass=""/>
                                         </div>
+                                        <h:message for="amarillo-5" styleClass="mensaje-alerta-13"/>
                                     </div>
                                 </div>
                             </div>
@@ -243,8 +245,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[15].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="morado-1" styleClass=""/>
                                         </div>
+                                        <h:message for="morado-1" styleClass="mensaje-alerta-13"/>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="morado-2"><span class="label-13">2</span></label>
@@ -256,8 +258,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[16].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="morado-2" styleClass=""/>
                                         </div>
+                                        <h:message for="morado-2" styleClass="mensaje-alerta-13"/>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="morado-3"><span class="label-13">3</span></label>
@@ -269,8 +271,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[17].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="morado-3" styleClass=""/>
                                         </div>
+                                        <h:message for="morado-3" styleClass="mensaje-alerta-13"/>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="morado-4"><span class="label-13">4</span></label>
@@ -282,8 +284,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[18].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="morado-4" styleClass=""/>
                                         </div>
+                                        <h:message for="morado-4" styleClass="mensaje-alerta-13"/>
                                     </div>
                                     <div class="uk-margin">
                                         <label class="uk-form-label" for="morado-5"><span class="label-13">5</span></label>
@@ -295,8 +297,8 @@
                                                          pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[19].pregunta}">
                                                 <f:validateRequired/>
                                             </h:inputText>
-                                            <h:message for="morado-5" styleClass=""/>
                                         </div>
+                                        <h:message for="morado-5" styleClass="mensaje-alerta-13"/>
                                     </div>
                                 </div>
                             </div>
@@ -313,8 +315,8 @@
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="azul-1" styleClass=""/>
                                 </div>
+                                <h:message for="azul-1" styleClass="mensaje-alerta-13"/>
                             </div>
                             <div class="uk-margin">
                                 <label class="uk-form-label" for="azul-2"><span class="label-13">2</span></label>
@@ -326,8 +328,8 @@
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="azul-2" styleClass=""/>
                                 </div>
+                                <h:message for="azul-2" styleClass="mensaje-alerta-13"/>
                             </div>
                             <div class="uk-margin">
                                 <label class="uk-form-label" for="azul-3"><span class="label-13">3</span></label>
@@ -339,8 +341,8 @@
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="azul-3" styleClass=""/>
                                 </div>
+                                <h:message for="azul-3" styleClass="mensaje-alerta-13"/>
                             </div>
                             <div class="uk-margin">
                                 <label class="uk-form-label" for="azul-4"><span class="label-13">4</span></label>
@@ -352,8 +354,8 @@
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="azul-4" styleClass=""/>
                                 </div>
+                                <h:message for="azul-4" styleClass="mensaje-alerta-13"/>
                             </div>
                             <div class="uk-margin">
                                 <label class="uk-form-label" for="azul-5"><span class="label-13">5</span></label>
@@ -365,8 +367,8 @@
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}">
                                         <f:validateRequired/>
                                     </h:inputText>
-                                    <h:message for="azul-5" styleClass=""/>
                                 </div>
+                                <h:message for="azul-5" styleClass="mensaje-alerta-13"/>
                             </div>
                         </div>
                     </div>
