--- a/tecolotl-web/src/main/webapp/alumno/mindmap/3.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/3.xhtml
@@ -116,7 +116,7 @@
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="unoa" styleClass=""/>
+                                <h:message for="unoa" styleClass="formulario-mensaje-3"/>
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" for="unob" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}"/>
                                 <div class="uk-form-controls">
                                     <h:inputText styleClass="uk-input"
@@ -127,7 +127,7 @@
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="unob" styleClass=""/>
+                                <h:message for="unob" styleClass="formulario-mensaje-3"/>
                             </div>
                             <div class="uk-margin mapa-caja margen-caja2 uk-width-1-1@s">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" for="dosa" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}"/>
@@ -140,7 +140,7 @@
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="dosa" styleClass=""/>
+                                <h:message for="dosa" styleClass="formulario-mensaje-3"/>
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" for="dosb" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}"/>
                                 <div class="uk-form-controls">
                                     <h:inputText styleClass="uk-input"
@@ -151,7 +151,7 @@
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="dosb" styleClass=""/>
+                                <h:message for="dosb" styleClass="formulario-mensaje-3"/>
                             </div>
                             <div class="uk-margin mapa-caja uk-width-1-1@s">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" for="tresa" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"/>
@@ -164,7 +164,7 @@
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="tresa" styleClass=""/>
+                                <h:message for="tresa" styleClass="formulario-mensaje-3"/>
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" for="tresb" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}"/>
                                 <div class="uk-form-controls">
                                     <h:inputText styleClass="uk-input"
@@ -175,7 +175,7 @@
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="tresb" styleClass=""/>
+                                <h:message for="tresb" styleClass="formulario-mensaje-3"/>
                             </div>
                             <div class="uk-margin mapa-caja margen-caja3 uk-width-1-1@s">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" for="cuatroa" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"/>
@@ -188,7 +188,7 @@
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="cuatroa" styleClass=""/>
+                                <h:message for="cuatroa" styleClass="formulario-mensaje-3"/>
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" for="cuatrob" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}"/>
                                 <div class="uk-form-controls">
                                     <h:inputText styleClass="uk-input"
@@ -199,7 +199,7 @@
                                         <f:validateRequired/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="cuatrob" styleClass=""/>
+                                <h:message for="cuatrob" styleClass="formulario-mensaje-3"/>
                             </div>
                             <h:commandButton id="boton-enviar-mapa-mental-movil"
                                              value="#{boton['submit']}"
