--- a/tecolotl-web/src/main/webapp/alumno/mindmap/5.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/5.xhtml
@@ -97,25 +97,25 @@
                     </div>
                     <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-margin-small-top" pt:uk-grid="" >
                         <div class="nube-5">
-                            <h:inputText styleClass="uk-input"
+                            <h:inputTextarea styleClass=""
                                          id="uno"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                          value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                          pt:placeholder="Some text...">
                                 <f:validateRequired/>
-                            </h:inputText>
-                            <h:message for="uno" styleClass=""/>
+                            </h:inputTextarea>
+                            <h:message for="uno" styleClass="mensaje-alerta-5"/>
                         </div>
                         <div class="nave-5"></div>
                         <div class="nube-5">
-                            <h:inputText styleClass="uk-input"
+                            <h:inputTextarea styleClass=""
                                          id="dos"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
                                          value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
                                          pt:placeholder="Some text...">
                                 <f:validateRequired/>
-                            </h:inputText>
-                            <h:message for="dos" styleClass=""/>
+                            </h:inputTextarea>
+                            <h:message for="dos" styleClass="mensaje-alerta-5"/>
                         </div>
                     </h:panelGroup>
                     <div class="imagen-nube-5 uk-margin-auto-left uk-margin-auto-right uk-margin-small-top ">
@@ -124,30 +124,30 @@
                     <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-margin-small-top uk-margin-small-bottom " pt:uk-grid="">
                         <div class="nave-5-1"></div>
                         <div class="input-5">
-                            <h:inputText styleClass="uk-input"
+                            <h:inputTextarea styleClass=""
                                          id="tres"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
                                          value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
                                          pt:placeholder="Some text...">
                                 <f:validateRequired/>
-                            </h:inputText>
-                            <h:message for="tres" styleClass=""/>
-                            <h:inputText styleClass="uk-input"
+                            </h:inputTextarea>
+                            <h:message for="tres" styleClass="mensaje-alerta-5"/>
+                            <h:inputTextarea styleClass=""
                                          id="cuatro"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
                                          value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
                                          pt:placeholder="Some text...">
                                 <f:validateRequired/>
-                            </h:inputText>
-                            <h:message for="cuatro" styleClass=""/>
-                            <h:inputText styleClass="uk-input"
+                            </h:inputTextarea>
+                            <h:message for="cuatro" styleClass="mensaje-alerta-5"/>
+                            <h:inputTextarea styleClass=""
                                          id="cinco"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
                                          value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
                                          pt:placeholder="Some text...">
                                 <f:validateRequired/>
-                            </h:inputText>
-                            <h:message for="cinco" styleClass=""/>
+                            </h:inputTextarea>
+                            <h:message for="cinco" styleClass="mensaje-alerta-5"/>
                         </div>
                         <div class="nave-5-2">
                         <h:commandButton id="boton-enviar-mapa-mental-movil"
