--- a/tecolotl-web/src/main/webapp/alumno/mindmap/7.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/7.xhtml
@@ -113,7 +113,7 @@
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
-                                <h:message for="uno" styleClass=""/>
+                                <h:message for="uno" styleClass="mensaje-alerta-7"/>
                             </div>
                             <div class="tam-contenedor uk-margin-auto">
                                 <h:outputLabel for="dos" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"/>
@@ -124,7 +124,7 @@
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
-                                <h:message for="dos" styleClass=""/>
+                                <h:message for="dos" styleClass="mensaje-alerta-7"/>
                             </div>
                             <div class="tam-contenedor uk-margin-auto">
                                 <h:outputLabel for="tres" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"/>
@@ -135,7 +135,7 @@
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
-                                <h:message for="tres" styleClass=""/>
+                                <h:message for="tres" styleClass="mensaje-alerta-7"/>
                             </div>
                             <div class="tam-contenedor uk-margin-auto">
                                 <h:outputLabel for="cuatro" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"/>
@@ -146,7 +146,7 @@
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
-                                <h:message for="cuatro" styleClass=""/>
+                                <h:message for="cuatro" styleClass="mensaje-alerta-7"/>
                             </div>
                             <div class="tam-contenedor uk-margin-auto">
                                 <h:outputLabel for="cinco" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}"/>
@@ -157,7 +157,7 @@
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
-                                <h:message for="cinco" styleClass=""/>
+                                <h:message for="cinco" styleClass="mensaje-alerta-7"/>
                             </div>
                             <div class="tam-contenedor uk-margin-auto">
                                 <h:outputLabel for="seis" styleClass="uk-form-label mapa-label" value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}"/>
@@ -168,7 +168,7 @@
                                         <f:validateRequired/>
                                     </h:inputTextarea>
                                 </div>
-                                <h:message for="seis" styleClass=""/>
+                                <h:message for="seis" styleClass="mensaje-alerta-7"/>
                             </div>
                             <h:commandButton id="boton-enviar-mapa-mental-movil"
                                              value="#{boton['submit']}"
