--- a/tecolotl-web/src/main/webapp/alumno/mindmap/9.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/9.xhtml
@@ -107,7 +107,7 @@
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="detallea" styleClass=""/>
+                                <h:message for="detallea" styleClass="mensaje-alerta-9"/>
                             </div>
                         </div>
                         <div class="uk-position-relative tam-contenido-mapa">
@@ -122,7 +122,7 @@
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="detalleb" styleClass=""/>
+                                <h:message for="detalleb" styleClass="mensaje-alerta-9"/>
                             </div>
                         </div>
                         <div class="uk-position-relative tam-contenido-mapa">
@@ -137,7 +137,7 @@
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="detallec" styleClass=""/>
+                                <h:message for="detallec" styleClass="mensaje-alerta-9"/>
                             </div>
                         </div>
                         <div class="uk-position-relative tam-contenido-mapa">
@@ -152,7 +152,7 @@
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
-                                <h:message for="detalled" styleClass=""/>
+                                <h:message for="detalled" styleClass="mensaje-alerta-9"/>
                             </div>
                         </div>
                         <h:commandButton id="boton-enviar-mapa-mental-movil"
